--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/art/image1.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                    <img src="images/art/image1.jpg"
-                                         srcset="images/art/image1.jpg 1x, images/art/image1.jpg 2x" alt="">
+                                <a href="/images/art/image1.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
+                                    <img src="/images/art/image1.jpg"
+                                         srcset="/images/art/image1.jpg 1x, /images/art/image1.jpg 2x" alt="">
                                 </a>
                             </div>
 
