Fix for no images

--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/art/image2.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                    <img src="images/art/image2.jpg"
-                                         srcset="images/art/image2.jpg 1x, images/art/image2.jpg 2x" alt="">
+                                <a href="images/art/image2.JPG" class="thumb-link" title="Shutterbug" data-size="1050x700">
+                                    <img src="images/art/image2.JPG"
+                                         srcset="images/art/image2.JPG 1x, images/art/image2.JPG 2x" alt="">
                                 </a>
                             </div>
 
@@ -356,9 +356,9 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/art/image3.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                    <img src="images/art/image3.jpg"
-                                         srcset="images/art/image3.jpg 1x, images/art/image3.jpg 2x" alt="">
+                                <a href="images/art/image3.JPG" class="thumb-link" title="Shutterbug" data-size="1050x700">
+                                    <img src="images/art/image3.JPG"
+                                         srcset="images/art/image3.JPG 1x, images/art/image3.JPG 2x" alt="">
                                 </a>
                             </div>
 
@@ -386,9 +386,9 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/art/image4.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                    <img src="images/art/image4.jpg"
-                                         srcset="images/art/image4.jpg 1x, images/art/image4.jpg 2x" alt="">
+                                <a href="images/art/image4.JPG" class="thumb-link" title="Shutterbug" data-size="1050x700">
+                                    <img src="images/art/image4.JPG"
+                                         srcset="images/art/image4.JPG 1x, images/art/image4.JPG 2x" alt="">
                                 </a>
                             </div>
 
@@ -416,9 +416,9 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/art/image5.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                    <img src="images/art/image5.jpg"
-                                         srcset="images/art/image5.jpg 1x, images/art/image5.jpg 2x" alt="">
+                                <a href="images/art/image5.JPG" class="thumb-link" title="Shutterbug" data-size="1050x700">
+                                    <img src="images/art/image5.JPG"
+                                         srcset="images/art/image5.JPG 1x, images/art/image5.JPG 2x" alt="">
                                 </a>
                             </div>
 
@@ -446,9 +446,9 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/art/image6.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                    <img src="images/art/image6.jpg"
-                                         srcset="images/art/image6.jpg 1x, images/art/image6.jpg 2x" alt="">
+                                <a href="images/art/image6.JPG" class="thumb-link" title="Shutterbug" data-size="1050x700">
+                                    <img src="images/art/image6.JPG"
+                                         srcset="images/art/image6.JPG 1x, images/art/image6.JPG 2x" alt="">
                                 </a>
                             </div>
 
